--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "react-playground",
+  "name": "goit-react-hw-06-phonebook",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://RadoProgramer.github.io/goit-react-hw-06-phonebook/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +30,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.77.2",
     "vite": "^5.2.0"
